app/styles/app.css
@import url(http://fonts.googleapis.com/css?family=Crimson+Text:600);

html, body {
    height: 100%;
}

body {
    margin: 0 auto;
    max-width: 1200px;
    background: #fffff0;
}

.flex-container {
    height: 100%;
    display: flex;
    flex-direction: column;
}

#main {
    flex: 1 1 0px;

    display: flex;
    flex-direction: column;

    background-color: #fffff0;
}

#top-bar {
    height: 3em;

    background-color: #ab3126;
    vertical-align: middle;
    text-align: center;
    line-height: 3em;
    border-bottom: 1px solid #222;
}

#top-bar h1 {
    color: #f4d023;
    font-family: 'Crimson Text', serif;
    font-size: 2em;
    text-shadow: 1px 1px 1px #000;
    margin: 0 0;
}

#bottom-bar {
    height: 3em;
    background-color: #ab3126;
    padding: 5px 5px;

    border-top: 1px solid #222;
}

.toolbar-button {
    height: 100%;
    border-radius: 7px;

    background-color: #f4d023;
    border: 0;
    color: #000;
    font-family: 'Crimson Text', serif;
    padding: 0 15px;
}

.toolbar-button.pressed {
    background-color: #c19d00;
}

.toolbar-button.right {
    float: right;
}

#chart {
    flex: 2 1 0px;
}

#dice {
    flex: 1 1 0px;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

    text-align: center;
    padding: 0 0 0 0;
    line-height: 1.5;
}

#dice.hidden, #chits.hidden {
    display: none;
}

#roll-button {
    padding: 8px 50px;
    background: #f4d023;
    color: #000;
    font-size: 2em;
    font-family: 'Crimson Text', serif;
    margin: 0 20px;
    border-radius: 7px;
    cursor: pointer;

    /* prevent text select on fake button */
    user-select: none;
}

#roll-result {
    font-family: 'Crimson Text', serif;
    font-size: 2.5em;
    margin: 0 20px;
}

#chits {
    text-align: center;
    width: 100%;

    flex: 1 1 0px;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.chit-row {
    margin: 5px 0;
}

.chit-row.wide {
    display: none;
}

.chit {
    font-family: Garamond, serif;
    margin: 0 5px;

    width: 38px;
    height: 38px;
    border-radius: 19px;
    border: 0px;

    text-align: center;
    background-color: #ffe5b4;
    overflow: hidden;
}

.chit.likely {
    color: #f00;
}

@media (min-width: 479px) {
    .chit-row.wide {
        display: block;
    }

    .chit-row.wide .chit {
        margin: 0 0px;
    }

    .chit-row.crunched {
        display: none;
    }
}

@media (min-width: 600px) {
    .chit-row.wide .chit {
        margin: 0 2px;
        width: 42px;
        height: 42px;
        border-radius: 21px;
        font-size: 16px;
    }
}

@media (min-width: 700px) {
    .chit-row.wide .chit {
        margin: 0 5px;
        width: 48px;
        height: 48px;
        border-radius: 24px;
        font-size: 18px;
    }
}

@media (min-width: 900px) {
    .chit-row.wide .chit {
        width: 64px;
        height: 64px;
        border-radius: 32px;
        font-size: 24px;
        margin: 0 5px;
    }
}

@media (min-width: 1100px) {
    .chit-row.wide .chit {
        width: 80px;
        height: 80px;
        border-radius: 40px;
        font-size: 32px;
        margin: 0 5px;
    }
}

@media (min-height: 479px) {
    #dice {
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
    }
}

rect.bar {
    fill: #ab3126; /* reddish */
    /*fill: #f4d023; /* yellowish */
}

